maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:7: error: type mismatch;
 found   : (Int, Int)
 required: Int
        return (i,j);
               ^ShortestPathMaze:4: error: type mismatch;
 found   : Unit
 required: Int
  for (i <- 0 to h-1) {
         ^